# adaptive-sandwich

./: .gitignore  .pylintrc  After_Study_Analyses.py  README.md  RL_Study_Simulation.py  after_study_analysis.py  after_study_analysis_partial.py  arg_threading_helpers.py  basic_RL_algorithms.py  batch_experiment_driver.sh  batch_experiments.sh  calculate_RL_derivatives.py  calculate_derivatives.py  calculate_rl_derivatives.py  cluster_simulation_requirements.txt  collect_existing_analyses.py  compare_kelly_nowell_analyses.py  conftest.py  constants.py  data_n30_T50.csv  debug_helper.py  do_blowup_supervised_learning.py  do_blowup_supervised_learning_slurm_driver.sh  est_eqn_helper.py  figure_coverage_intro.py  form_adaptive_meat_adjustments_directly.py  get_datum_for_blowup_supervised_learning.py  helper_functions.py  input_checks.py  jax_exploration.py  least_squares_helper.py  local_run.sh  may3_smooth_posterior_sampling.py  miwaves_run_and_analysis_parallel.sh  old2_After_Study_Analyses.py  oralytics_env.py  oralytics_run_and_analysis_parallel.sh  paper_simulation_cases.sh  pyproject.toml  pytest.ini  (+47 more)
Miwaves/: BayesianLinearMixedEffectsRD.py  BayesianLinearRegressionRD.py  FlatProb.py  MLR.pkl  README.md  RLAlgorithm.py  combined_data.csv  env.yml  priors.py  simulator_RD.py
functions_to_pass_to_analysis/: RL_least_squares_estimating_function_regularized.py  RL_least_squares_loss_regularized.py  RL_least_squares_loss_regularized_previous_betas_as_args.py  estimate_theta_avg_reward_diff_partial_0.py  estimate_theta_avg_reward_diff_partial_01.py  get_loss.py  (+49 more)
(+393 files in other folders)
